@@ -4,28 +4,34 @@ import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
-import java.util.HashSet;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import static com.gabriel.ecommerce.entities.enums.Permission.*;
 
 @RequiredArgsConstructor
 public enum Role {
+    USER(Collections.emptySet()),
     ADMIN(
             Set.of(
                     ADMIN_READ,
                     ADMIN_CREATE,
                     ADMIN_UPDATE,
-                    ADMIN_DELETE
+                    ADMIN_DELETE,
+                    MANAGER_READ,
+                    MANAGER_CREATE,
+                    MANAGER_UPDATE,
+                    MANAGER_DELETE
             )
     ),
-    USER(
+    MANAGER(
             Set.of(
-                    USER_READ,
-                    USER_CREATE,
-                    USER_UPDATE,
-                    USER_DELETE
+                    MANAGER_READ,
+                    MANAGER_CREATE,
+                    MANAGER_UPDATE,
+                    MANAGER_DELETE
             )
     );
 
@@ -33,9 +39,11 @@ public enum Role {
     private final Set<Permission> permissions;
 
     public List<SimpleGrantedAuthority> getAuthorities() {
-        var authorities =  getPermissions().stream().map(permission
-                -> new SimpleGrantedAuthority((permission.name()))).toList();
-        authorities.add(new SimpleGrantedAuthority("ROLE_" + name()));
+        var authorities =  getPermissions()
+                .stream()
+                .map(permission -> new SimpleGrantedAuthority((permission.getPermission())))
+                .collect(Collectors.toList());
+        authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
         return authorities;
     }
 }
